2005-02-21  H.J. Lu  <hongjiu.lu@intel.com>

	* ldlang.c (lang_add_section): Check SEC_TIC54X_BLOCK for TI
	tic54x input only.
	(lang_size_sections_1): Check SEC_COFF_SHARED_LIBRARY for COFF
	and ECOFF output only.

2005-02-21  Alan Modra  <amodra@bigpond.net.au>

	* config.in: Regenerate.
	* configure: Regenerate.

2005-02-17  Zack Weinberg  <zack@codesourcery.com>

	* ldexp.c (assigning_to_dot): New global flag.
	(fold_name): If assigning_to_dot is true, object immediately to
	an undefined symbol.
	(exp_fold_tree): Set and clear assigning_to_dot around the
	recursive call to exp_fold_tree to process the right-hand side
	of an assignment to the location counter.

2005-02-17  Paul Brook  <paul@codesourcery.com>

	* scripttempl/armbpabi.sc: Add dummy name to version block.

2005-02-17  Alan Modra  <amodra@bigpond.net.au>

	* ldexp.c (new_abs): Init new.str.

2005-02-15  Mark Mitchell  <mark@codesourcery.com>

	* configure.in (AC_CHECK_FUNCS): Add glob.
	* configure: Regenerated.
	* emultempl/elf32.em (<glob.h>): Do not include if HAVE_GLOB is
	not defined.
	(gld${EMULATION_NAME}_parse_ld_so_conf_include): Do not use glob
	if HAVE_GLOB is not defined.

2005-02-16  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* emultempl/elf32.em (gld${EMULATION_NAME}_after_open): Define
	lib_path if NATIVE is yes.

2005-02-16  Alan Modra  <amodra@bigpond.net.au>

	* emultempl/ppc64elf.em (ppc_create_output_section_statements): Make
	an error creating fake bfd fatal.
	(ppc_before_allocation): Continue on after errors.
	(gld${EMULATION_NAME}_finish): Likewise.

2005-02-15  Nick Clifton  <nickc@redhat.com>

	* ldlex.l (YY_NO_UNPUT): Define so that the yy_unput function is
	not declared.  It is not used and its presence causes a compile
	time warning.

2005-02-11  Zack Weinberg  <zack@codesourcery.com>

	* emultempl/elf32.em (gld${EMULATION_NAME}_stat_needed):
	If st.st_ino is zero, do not treat the library as a duplicate.

2005-02-10  Jakub Jelinek  <jakub@redhat.com>
