@@ -1,6 +1,6 @@
 /* ldwrite.c -- write out the linked file
    Copyright 1991, 1992, 1993, 1994, 1995, 1996, 1997, 1998, 2000, 2002,
-   2003, 2004 Free Software Foundation, Inc.
+   2003, 2004, 2005 Free Software Foundation, Inc.
    Written by Steve Chamberlain sac@cygnus.com
 
 This file is part of GLD, the Gnu Linker.
@@ -242,7 +242,7 @@ build_link_order (lang_statement_union_type *statement)
 		     is going to be output, we'll change it into a
 		     fill.  */
 		  link_order->type = bfd_data_link_order;
-		  link_order->u.data.contents = "";
+		  link_order->u.data.contents = (unsigned char *) "";
 		  link_order->u.data.size = 1;
 		}
 	      else
