@@ -1,3 +1,9 @@
+2005-02-22  Alan Modra  <amodra@bigpond.net.au>
+
+	* ldexp.c: Warning fixes.
+	* ldwrite.c: Likewise.
+	* emultempl/elf32.em: Likewise.
+
 2005-02-21  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* ldlang.c (lang_add_section): Check SEC_TIC54X_BLOCK for TI
